Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UCharacterMovementComponent.h

	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NavMeshProjectionInterval_GET(UCharacterMovementComponent* Ptr) { return Ptr->NavMeshProjectionInterval; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NavMeshProjectionInterval_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NavMeshProjectionInterval = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NavMeshProjectionTimer_GET(UCharacterMovementComponent* Ptr) { return Ptr->NavMeshProjectionTimer; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NavMeshProjectionTimer_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NavMeshProjectionTimer = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NavWalkingFloorDistTolerance_GET(UCharacterMovementComponent* Ptr) { return Ptr->NavWalkingFloorDistTolerance; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NavWalkingFloorDistTolerance_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NavWalkingFloorDistTolerance = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetProxyShrinkHalfHeight_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetProxyShrinkHalfHeight; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetProxyShrinkHalfHeight_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NetProxyShrinkHalfHeight = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetProxyShrinkRadius_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetProxyShrinkRadius; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetProxyShrinkRadius_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NetProxyShrinkRadius = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetworkLargeClientCorrectionDistance_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetworkLargeClientCorrectionDistance; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetworkLargeClientCorrectionDistance_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NetworkLargeClientCorrectionDistance = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetworkMaxSmoothUpdateDistance_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetworkMaxSmoothUpdateDistance; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetworkMaxSmoothUpdateDistance_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NetworkMaxSmoothUpdateDistance = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetworkMinTimeBetweenClientAckGoodMoves_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetworkMinTimeBetweenClientAckGoodMoves; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetworkMinTimeBetweenClientAckGoodMoves_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NetworkMinTimeBetweenClientAckGoodMoves = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetworkMinTimeBetweenClientAdjustments_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetworkMinTimeBetweenClientAdjustments; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetworkMinTimeBetweenClientAdjustments_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NetworkMinTimeBetweenClientAdjustments = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetworkMinTimeBetweenClientAdjustmentsLargeCorrection_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetworkMinTimeBetweenClientAdjustmentsLargeCorrection; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetworkMinTimeBetweenClientAdjustmentsLargeCorrection_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NetworkMinTimeBetweenClientAdjustmentsLargeCorrection = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetworkNoSmoothUpdateDistance_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetworkNoSmoothUpdateDistance; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetworkNoSmoothUpdateDistance_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NetworkNoSmoothUpdateDistance = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetworkSimulatedSmoothLocationTime_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetworkSimulatedSmoothLocationTime; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetworkSimulatedSmoothLocationTime_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NetworkSimulatedSmoothLocationTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetworkSimulatedSmoothRotationTime_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetworkSimulatedSmoothRotationTime; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetworkSimulatedSmoothRotationTime_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NetworkSimulatedSmoothRotationTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NetworkSmoothingMode_GET(UCharacterMovementComponent* Ptr) { return Ptr->NetworkSmoothingMode; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NetworkSmoothingMode_SET(UCharacterMovementComponent* Ptr, ENetworkSmoothingMode Value) { Ptr->NetworkSmoothingMode = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_OldBaseLocation_GET(UCharacterMovementComponent* Ptr) { return (INT_PTR)&(Ptr->OldBaseLocation); }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_OldBaseLocation_SET(UCharacterMovementComponent* Ptr, INT_PTR Value) { Ptr->OldBaseLocation = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_OldBaseQuat_GET(UCharacterMovementComponent* Ptr) { return (INT_PTR)&(Ptr->OldBaseQuat); }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_OldBaseQuat_SET(UCharacterMovementComponent* Ptr, INT_PTR Value) { Ptr->OldBaseQuat = *(FQuat*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_OutofWaterZ_GET(UCharacterMovementComponent* Ptr) { return Ptr->OutofWaterZ; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_OutofWaterZ_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->OutofWaterZ = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_PendingLaunchVelocity_GET(UCharacterMovementComponent* Ptr) { return (INT_PTR)&(Ptr->PendingLaunchVelocity); }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_PendingLaunchVelocity_SET(UCharacterMovementComponent* Ptr, INT_PTR Value) { Ptr->PendingLaunchVelocity = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_PerchAdditionalHeight_GET(UCharacterMovementComponent* Ptr) { return Ptr->PerchAdditionalHeight; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_PerchAdditionalHeight_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->PerchAdditionalHeight = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_PerchRadiusThreshold_GET(UCharacterMovementComponent* Ptr) { return Ptr->PerchRadiusThreshold; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_PerchRadiusThreshold_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->PerchRadiusThreshold = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_PushForceFactor_GET(UCharacterMovementComponent* Ptr) { return Ptr->PushForceFactor; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_PushForceFactor_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->PushForceFactor = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_PushForcePointZOffsetFactor_GET(UCharacterMovementComponent* Ptr) { return Ptr->PushForcePointZOffsetFactor; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_PushForcePointZOffsetFactor_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->PushForcePointZOffsetFactor = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_RepulsionForce_GET(UCharacterMovementComponent* Ptr) { return Ptr->RepulsionForce; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_RepulsionForce_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->RepulsionForce = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_RequestedVelocity_GET(UCharacterMovementComponent* Ptr) { return (INT_PTR)&(Ptr->RequestedVelocity); }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_RequestedVelocity_SET(UCharacterMovementComponent* Ptr, INT_PTR Value) { Ptr->RequestedVelocity = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_RotationRate_GET(UCharacterMovementComponent* Ptr) { return (INT_PTR)&(Ptr->RotationRate); }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_RotationRate_SET(UCharacterMovementComponent* Ptr, INT_PTR Value) { Ptr->RotationRate = *(FRotator*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_StandingDownwardForceScale_GET(UCharacterMovementComponent* Ptr) { return Ptr->StandingDownwardForceScale; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_StandingDownwardForceScale_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->StandingDownwardForceScale = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_TouchForceFactor_GET(UCharacterMovementComponent* Ptr) { return Ptr->TouchForceFactor; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_TouchForceFactor_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->TouchForceFactor = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_UpperImpactNormalScale_DEPRECATED_GET(UCharacterMovementComponent* Ptr) { return Ptr->UpperImpactNormalScale_DEPRECATED; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_UpperImpactNormalScale_DEPRECATED_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->UpperImpactNormalScale_DEPRECATED = Value; }
	DOTNET_EXPORT auto E_UCharacterMovementComponent_AddForce(UCharacterMovementComponent* Self, INT_PTR Force)
	{
		auto _p0 = *(FVector*)Force;
		Self->AddForce(_p0);
	}